Viget: Interactive WCAG 2.0.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -66,6 +66,9 @@
             conformance level and the technologies that apply to the content
             they are creating.
           </li>
+          <li>Viget:
+            <a href="http://code.viget.com/interactive-wcag/">Interactive <abbr title="Web Content Accessibility Guidelines">WCAG</abbr> 2.0</a>.
+          </li>
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
