--- a/elearning.html
+++ b/elearning.html
@@ -214,7 +214,17 @@
         Microsoft Excel, OpenOffice Calc, Microsoft PowerPoint, OpenOffice Impress
         and several other applications.
       </li>
-      <li>Acceded <abbr>PDF</abbr> Project:
+      <!-- 
+        * "Hpw I use Libreoffice for adaptive typing" (by crippledcritic / Robert Kingett, who has cerebral palsy): https://www.youtube.com/watch?v=wXEavIjNovQ 
+        * PhraseExpress (Text expander for Windows: http://www.phraseexpress.com/ 
+          ** Freeware - 30-day trial: http://www.phraseexpress.com/freeware.htm 
+          ** See alternatives at http://alternativeto.net/software/textexpander/?license=free 
+          *** e.g. Texter (for Windows, written in AutoHotkey scripting language): https://github.com/adampash/texter 
+        * Jurgen Gaeremyn: "Creating a fillable PDF form using LibreOffice Writer" (15 minutes): https://www.youtube.com/watch?v=fC1g7tT997w
+          ** Issue with two sets of radio buttons (each in a table row): in Foxit Reader, the two sets of radio buttons behave as if they were a single set. Is this a bug in Foxit Reader (test in Adobe Reader) or in PDF form export?
+          ** Is this accessible??
+      -->
+      <li>Accede <abbr>PDF</abbr> Project:
         <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
         (English translation of
         <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
