--- a/webaccess/aria_wcag2_gl4-1.html
+++ b/webaccess/aria_wcag2_gl4-1.html
@@ -19,7 +19,7 @@
     </h1>
   </header>
   <main>
-    <p>Auhor and date: <span lang="nl-BE">Christophe Strobbe</span>, 03.02.2016.</p>
+    <p>Author and date: <span lang="nl-BE">Christophe Strobbe</span>, 03.02.2016.</p>
 
     <!--  
     <h2 id="summary">Summary</h2>
