Turned into HTML5; CSS links added.

--- a/gpii/gpii-for-developers.html
+++ b/gpii/gpii-for-developers.html
@@ -1,16 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
+<!DOCTYPE html>
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>GPII/Cloud4all for Developers</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/stuttgartbib.css" title="default" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/verdemoderna.css" title="alternative stylesheet (green)" />
 </head>
 
 <body>
-<h1><abbr>GPII</abbr>/Cloud4all for Developers</h1>
+  <header>
+    <h1><span class="h1txt"><abbr>GPII</abbr>/Cloud4all for Developers</span></h1>
+  </header>
 
-<p>Author: Christophe Strobbe (strobbe[at]hdm-stuttgart[dot]de).</p>
+  <main>
+  	
+<p>Author: <a href="https://github.com/cstrobbe">Christophe Strobbe</a> (strobbe[at]hdm-stuttgart[dot]de).</p>
 
 <p>Licence: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License 
 (<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" xml:lang="en-US"
@@ -584,7 +588,7 @@ done from within the application’s own <abbr>UI</abbr>). <abbr>MS</abbr>
 Windows itself only responded to turning high contrast on or off. The GNOME
 desktop on <abbr>GNU</abbr>/Linux responded to a larger number of settings
 changes (see the list of settings in 
-<a href="https://issues.gpii.net/browse/GPII-565">JIRA ticket <abbr>GPII</abbr>-565). 
+<a href="https://issues.gpii.net/browse/GPII-565">JIRA ticket <abbr>GPII</abbr>-565</a>). 
 However, desktop applications ignore settings changes by the
 <abbr>PCP</abbr> entirely, so they needed to be closed and restarted in order
 to apply the new settings. (This was the approach used in the Cloud4all second
@@ -658,17 +662,12 @@ build on the Settings Handler code that the real-time framework was already
 using to backup and restore settings when users log in and out, respectively.
 However, it was much harder to develop than expected and is no longer
 available. (See also the thread about the “Capture tool” on the
-<abbr>GPII</abbr> Architecture mailing list starting at <a
-href="http://lists.gpii.net/pipermail/architecture/2015-March/003402.html">http://lists.gpii.net/pipermail/architecture/2015-March/003402.html</a>
-(March 2015) and continued at <a
-href="http://lists.gpii.net/pipermail/architecture/2015-April/003412.html">http://lists.gpii.net/pipermail/architecture/2015-April/003412.html</a>
+<abbr>GPII</abbr> Architecture mailing list starting at 
+<a href="http://lists.gpii.net/pipermail/architecture/2015-March/003402.html">http://lists.gpii.net/pipermail/architecture/2015-March/003402.html</a>
+(March 2015) and continued at 
+<a href="http://lists.gpii.net/pipermail/architecture/2015-April/003412.html">http://lists.gpii.net/pipermail/architecture/2015-April/003412.html</a>
 (April 2015).)</p>
-
-<p></p>
-
-<p></p>
-
-<p></p>
+  </main>
 
 </body>
 </html>
