Footer with page URL.

--- a/gpii/gpii-for-developers.html
+++ b/gpii/gpii-for-developers.html
@@ -669,5 +669,8 @@ available. (See also the thread about the “Capture tool” on the
 (April 2015).)</p>
   </main>
 
+  <footer>
+  	<p>Page <abbr>URL</abbr>: <a href="http://cstrobbe.github.io/AccessibilityResources/gpii/gpii-for-developers.html">http://cstrobbe.github.io/AccessibilityResources/gpii/gpii-for-developers.html</a>.</p>
+  </footer>
 </body>
 </html>
