Link to GPII/Cloud4all for developers.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
       </li>
       <li><a href="tts.html">Text-to-speech software</a>.
       </li>
+      <li><abbr title="General Public Inclusive Infrastucture">GPII</abbr>:
+        <ul>
+          <li>
+            <a href="gpii/gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</span></a>.
+          </li>
+        </ul>
+      </li>
     </ul>
     <p>
       The website of the European project 
