WCAG: Wuhcag and Penn State Uni.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -69,6 +69,16 @@
           <li>Viget:
             <a href="http://code.viget.com/interactive-wcag/">Interactive <abbr title="Web Content Accessibility Guidelines">WCAG</abbr> 2.0</a>.
           </li>
+          <li>Wuhcag:
+            <a href="https://www.wuhcag.com/wcag-checklist/"><abbr>WCAG</abbr> 2.0 checklists</a>:
+            three checklists for levels A, AA and AAA, respectively.
+            The checklists are also available as <abbr>PDF</abbr> files.
+          </li>
+          <li>Pennsylvania State University:
+            <a href="http://accessibility.psu.edu/wcag2/"><abbr>WCAG</abbr> 2.0 Guidelines</a>:
+            summaries of the guidelines for
+            <q>Webmasters who may have some knowledge of HTML or programming</q>.
+          </li>
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
