Minor edit (IMS specs).

--- a/elearning.html
+++ b/elearning.html
@@ -45,7 +45,7 @@
         group. Some of their specifications are listed below.</li>
       <li><a href="http://www.imsglobal.org/accessibility/accessiblevers/index.html"><abbr>IMS</abbr>
         Guidelines for Developing Accessible Learning Applications</a> (2002).<br />
-        (This specification is rather old; the links to related <abbr>IMS</abbr> are now outdated.)
+        (This specification is rather old; the links to related <abbr>IMS</abbr> specifications are often outdated.)
       </li>
       <li><a href="http://www.imsglobal.org/accessibility/accdrdv2p0/html/ISO_ACCDRDv2p0_InfoModelv1.html"><abbr>IMS</abbr>
         Access For All Digital Resource Description Information Model</a> (version 2, 2009)
