Link to page about Sublime Text integration.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
           <li>
             <a href="gpii/gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</span></a>.
           </li>
+          <li>
+            <a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a>.
+          </li>
         </ul>
       </li>
     </ul>
