Device reporter: see also Solutions Scanner.

--- a/gpii/integrating-sublimetext.html
+++ b/gpii/integrating-sublimetext.html
@@ -411,6 +411,10 @@
         this is the list of integrated solutions that the 
         <abbr>GPII</abbr>'s <a href="https://wiki.gpii.net/w/GPII_Architecture_Overview#Device_Reporter">device reporter</a>
         can report as available.
+        (This is currently a list that needs to be edited manually;
+        later, the list of solutions available on a system should be reported automatically by a component known as the
+        <a href="https://wiki.gpii.net/w/Available_Solutions_Scanner">Available Solutions Scanner</a>.)
+        <!-- see also Device Reporter: https://issues.gpii.net/browse/GPII/component/10002/?selectedTab=com.atlassian.jira.jira-projects-plugin:component-summary-panel -->
       </li>
       <li>A description of the solution (in Markdown format).</li>
       <li>A number of preference sets that can be used to demonstrate the integration of the solutions,
@@ -660,6 +664,10 @@
 
     <h4 id="integration-testing">Testing the Integration</h4>
     <p>(todo)</p>
+    <p>When the integration tests are complete, you should check that all the code in the pull request
+      meets the criteria in the
+      <a href="https://wiki.gpii.net/w/Pull_Request_Review_Checklist_%28GPII_Laser_eye_checklist%29">Pull Request Review Checklist</a>.
+    </p>
 
 
   </main>
