--- a/designforall.html
+++ b/designforall.html
@@ -34,7 +34,7 @@
   </nav>
 
   <main>
-    <!--h2></h2-->
+    <h2>Design for All / Universal Design in General</h2>
     <ul>
       <li>
         <a href="https://www.ncsu.edu/www/ncsu/design/sod5/cud/">Center for Universal Design (<abbr>CUD</abbr>)</a>
@@ -79,6 +79,16 @@
       </li>
     </ul>
 
+    <h2>Involving Users</h2>
+    <ul>
+    <!-- 
+      <li>@@Just Ask!...
+      </li>
+    -->
+      <li>Web Accessibility Initiative: 
+        <a href="https://www.w3.org/WAI/users/involving">Involving Users in Web Projects for Better, Easier Accessibility</a>.
+      </li>
+    </ul>
   </main>
 
   <footer>
